--- a/configure.in
+++ b/configure.in
@@ -21,7 +21,7 @@
 AC_INIT([GNU make],[3.82.90],[bug-make@gnu.org])
 
 AC_PREREQ([2.59])
-AC_REVISION([$Id: configure.in,v 1.161 2012/01/16 02:29:22 psmith Exp $])
+AC_REVISION([$Id: configure.in,v 1.162 2012/01/29 18:12:22 psmith Exp $])
 
 # Autoconf setup
 AC_CONFIG_AUX_DIR([config])
@@ -180,8 +180,7 @@ AC_ARG_WITH([guile], [AS_HELP_STRING([--with-guile],
 AS_IF([test "x$with_guile" != xno],
 [ PKG_CHECK_MODULES([GUILE], [guile-2.0], [have_guile=yes],
   [PKG_CHECK_MODULES([GUILE], [guile-1.8], [have_guile=yes],
-   [PKG_CHECK_MODULES([GUILE], [guile-1.6], [have_guile=yes],
-    [have_guile=no])])])
+    [have_guile=no])])
 ])
 
 AS_IF([test "$have_guile" = yes],
